src/objects/Third_Party_Originator__c.object
<CustomObject>
    <description>to store the originator association between a third party and a subject</description>
    <fields>
        <fullName>Other_Originator__c</fullName>
        <label>Other Originator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Caregiver</fullName>
                </value>
                <value>
                    <fullName>Collection Agency</fullName>
                </value>
                <value>
                    <fullName>Family/Friend/Spouse</fullName>
                </value>
                <value>
                    <fullName>Insurance Carrier</fullName>
                </value>
                <value>
                    <fullName>Interpreter for Member</fullName>
                </value>
                <value>
                    <fullName>Parent/Guardian/Custody Holder</fullName>
                </value>
                <value>
                    <fullName>Personal Representative</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Prospective Member</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Reporter</fullName>
                </value>
                <value>
                    <fullName>State Regulatory Agent/Government Agency</fullName>
                </value>
                <value>
                    <fullName>UHG Employee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subject</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Third_Party_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Third_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Third Party</label>
        <referenceTo>Third_Party__c</referenceTo>
        <relationshipLabel>Third Party Originators</relationshipLabel>
        <relationshipName>Third_Party_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Third Party Originator</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Third Party Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Third Party Originators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>